--- a/kitchen/templates/base.html
+++ b/kitchen/templates/base.html
@@ -7,13 +7,52 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    {% block title %}
+      <title>Main page</title>
+    {% endblock %}
   </head>
   <body>
-    {% block content %}
-        <h1>Hello, world!</h1>
-    {% endblock %}
+    <div class="container">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Kafe</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kitchen:cook_list' %}">Home</a>
+              </li>
+
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link"  href="{% url 'kitchen:dish_type_list' %}">Dish Types</a>
+              </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+              {% endif %}
+              <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">hi, {{user.username}}</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-9">
+          {% block content %}
+            <h1>Hello, world!</h1>
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
