Add search and pagination to dish list page

--- a/kitchen/templates/base.html
+++ b/kitchen/templates/base.html
@@ -54,6 +54,9 @@
           {% block content %}
             <h1>Hello, world!</h1>
           {% endblock %}
+          {% block pagination %}
+            {% include "includes/pagination.html" %}
+          {% endblock %}
         </div>
       </div>
     </div>
