--- a/kitchen/templates/kitchen/dish_list.html
+++ b/kitchen/templates/kitchen/dish_list.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     <h1>Dish List</h1>
+    <form action="" method="get" class="form-inline">
+        {{ search_form.as_p }}
+        <input class="btn btn-secondary" type="submit" value="🔍">
+    </form>
     <ul>
         {% for dish in dish_list %}
             <li>{{ dish.name }} - {{ dish.dish_type.name }}</li>
