--- a/kitchen/templates/kitchen/cook_list.html
+++ b/kitchen/templates/kitchen/cook_list.html
@@ -1,14 +1,42 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
 {% block content %}
-    <h1>It's Cook list {{ Cook }}</h1>
-    <ul>
-        {% for cook in cook_list %}
-            <li>{{ cook.username }} - {{ cook.first_name }} {{ cook.last_name }}</li>
-            <a href="{% url 'kitchen:cook_edit' cook.pk %}">Edit</a>
-            <a href="{% url 'kitchen:cook_delete' cook.pk %}">Delete</a>
-        {% empty %}
-            <li>No cooks available.</li>
-        {% endfor %}
-        <li><a href="{% url 'kitchen:cook_create'%}">Add cook</a></li>
-    </ul>
+    <h1 class="text-center m-3">Cook List</h1>
+
+    <!-- Table for displaying cooks -->
+    <table class="table table-striped table-hover text-center">
+        <thead class="table-dark">
+            <tr>
+                <th>Username</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Years of experience</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for cook in cook_list %}
+                <tr>
+                    <td>{{ cook.username }}</td>
+                    <td>{{ cook.first_name }}</td>
+                    <td>{{ cook.last_name }}</td>
+                    <td>{{ cook.years_of_experience }}</td>
+                    <td>
+                        <a href="{% url 'kitchen:cook_edit' cook.pk %}" class="btn btn-sm btn-primary">Edit</a>
+                        <a href="{% url 'kitchen:cook_delete' cook.pk %}" class="btn btn-sm btn-danger">Delete</a>
+                    </td>
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="4" class="text-center">No cooks available.</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    <!-- Add new cook button -->
+    <div class="text-center mt-3">
+        <a href="{% url 'kitchen:cook_create' %}" class="btn btn-success">Add Cook</a>
+    </div>
 {% endblock %}
