--- a/kitchen/templates/kitchen/dish_type_list.html
+++ b/kitchen/templates/kitchen/dish_type_list.html
@@ -1,16 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Dish Types</h1>
-    <ul>
-        {% for dish_type in dish_types %}
-            <li>
-                {{ dish_type.name }}
-                <a href="{% url 'kitchen:dish_type_update' dish_type.pk %}">Edit</a>
-                <a href="{% url 'kitchen:dish_type_delete' dish_type.pk %}">Delete</a>
-            </li>
-        {% endfor %}
+    <h1 class="text-center m-3">Dish Types</h1>
 
-        <a href="{% url 'kitchen:dish_type_create' %}">Create New Dish Type</a>
-    </ul>
+    <table class="table table-striped table-hover text-center">
+        <thead class="table-dark">
+            <tr>
+                <th>Name</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for dish_type in dish_types %}
+            <tr>
+                <td>{{ dish_type.name }}</td>
+                <td>
+                    <a href="{% url 'kitchen:dish_type_update' dish_type.pk %}" class="btn btn-sm btn-primary">Edit</a>
+                    <a href="{% url 'kitchen:dish_type_delete' dish_type.pk %}" class="btn btn-sm btn-danger">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    <div class="text-center mt-3">
+        <a href="{% url 'kitchen:dish_type_create' %}" class="btn btn-success">Create New Dish Type</a>
+    </div>
 {% endblock %}
